<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <ImageView
            android:id="@+id/bloodPressureImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/blood_pressure_icon"
            android:contentDescription="@string/blood_pressure_icon_content_description" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bloodPressureImageView"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/systolicTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/systolic"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/diastolicTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diastolic"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/readingDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/date"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/warningImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/warningImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/exclamation_sign"
            android:contentDescription="@string/warning_image_content_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>